fix some overflow bugs, move MovieCardExpend class into Landing page instead of ListMovies. Some visual improvements

--- a/src/style/Landing.css
+++ b/src/style/Landing.css
@@ -7,4 +7,5 @@
   margin: 2em;
   display: flex;
   padding-bottom: 3em;
+  position: relative;
 }
